# aibek-diplom

./: .gitignore  README.md  app.py  config.py  pyproject.toml
data/: Test.csv  aggregated_sales_with_exogenous.csv  ahyes.csv  ohno.csv
db/: models.py  user_repo.py
helpers/: login.py  plot_utils.py  script_utils.py
models/: supermarketsales.pkl  supermarketsales2.pkl  supermarketsales4.pkl
routes/: anomalies.py  auth.py  compare_models.py  error_handlers.py  exog_predict.py  exog_train.py  export_bp.py  file_manager.py  generate_report.py  history.py  index.py  metrics.py  predict.py  returns_predict.py  returns_train.py  sku_predict.py  sku_train.py  train.py  transform.py  trends.py  upload_csv.py  view_data.py
scripts/: agg_model.py  aggregate_by_category.py  income.py
services/: filters.py  login_manager.py  mail_manager.py  metrics_service.py  model_service.py
src/: data_prep.py  economic.py  predict.py  train_model.py
templates/: 401.html  403.html  404.html  admin_users.html  anomalies.html  base.html  compare_models.html  dashboard.html  diagnostics.html  edit_profile.html  exog_predict.html  exog_train.html  export_page.html  faq.html  file_manager.html  forecast.html  history.html  index.html  layout.html  lending.html  login.html  metrics.html  predict.html  profile.html  register.html  report_template.html  returns_predict.html  returns_train.html  sku_predict.html  sku_train.html  train.html  transform_data.html  trends.html  two_factor.html  upload_script.html  users.html  view_binary.html  view_data.html  view_file.html  view_table.html
(+2 files in other folders)
