[tool.poetry]
name = "aibek-diplom"
version = "0.1.0"
description = ""
authors = ["pikoUsername <galymzhan.amantaj@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.3"
plotly = "^6.0.1"
flask = "^3.1.0"
jinja2 = "^3.1.6"
joblib = "^1.4.2"
pmdarima = "^2.0.4"
numpy = "1.26.4"
matplotlib = "^3.10.1"
pygments = "^2.19.1"
flask-sqlalchemy = "^3.1.1"
flask-login = "^0.6.3"
flask-mail = "^0.10.0"
pdfkit = "^1.0.0"
openpyxl = "^3.1.5"
flask-babel = "^4.0.0"
pytest = "^8.3.5"
pytest-cov = "^6.1.1"
hypothesis = "^6.131.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
